# kanpo-rss

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN-atom-feed.md  PLAN.md  README.md  plan.md  pyproject.toml
.github/workflows/: generate-feed.yml  test.yml
data/: issues.json
docs/: index.html  llms.txt
src/kanpo_rss/: __init__.py  __main__.py  cli.py  feed_generator.py  models.py  parser.py  scraper.py  storage.py
tests/: conftest.py  test_cli.py  test_feed_generator.py  test_parser.py  test_scraper.py  test_storage.py
tests/fixtures/: issue_page_gougai.html  issue_page_honshi.html  top_page.html
